# invoice-ai-based

invoice/InvoicePro/: .gitignore  ai_services.py  analytics_engine.py  app.py  blockchain_service.py  config.py  main.py  models.py  ocr_service.py  pdf_generator.py  pyproject.toml  replit.md  routes.py  run.py  sample.txt  utils.py  voice_service.py
invoice/InvoicePro/attached_assets/: README_1751374431272.md  app_1751374431270.py  config_1751374431270.py  main_1751374431271.py  models_1751374431271.py  pdf_generator_1751374431271.py  pyproject_1751374431271.toml  routes_1751374431272.py  twilio_config_1751374431272.py  utils_1751374431272.py
invoice/InvoicePro/blockchain_data/: invoice_chain.json
invoice/InvoicePro/instance/: revolutionary_invoice.db
invoice/InvoicePro/static/Js/: voice-command.js
invoice/InvoicePro/static/css/: glassmorphism.css  main.css
invoice/InvoicePro/templates/: 404.html  500.html  ai_assistant.html  analytics.html  base.html  client_management.html  create_challan.html  create_client.html  create_invoice.html  crm.html  dashboard.html  delivery_challan.html  edit_invoice.html  invoice_detail.html  invoice_management.html  login.html  settings.html
