[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "opencv-python>=4.11.0.86",
    "psycopg2-binary>=2.9.10",
    "pytesseract>=0.3.13",
    "python-dateutil>=2.9.0.post0",
    "qrcode>=8.2",
    "reportlab>=4.4.2",
    "speechrecognition>=3.14.3",
    "sqlalchemy>=2.0.41",
    "tesseract>=0.1.3",
    "werkzeug>=3.1.3",
]
